--- a/ChatServer/Server/Server.csproj
+++ b/ChatServer/Server/Server.csproj
@@ -44,7 +44,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionHandler.cs" />
-    <Compile Include="Message.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
@@ -53,9 +52,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\NetNodeInfo\NetNodeInfo.csproj">
-      <Project>{9b9e450a-56dd-4946-bd2c-d7b9419c84f5}</Project>
-      <Name>NetNodeInfo</Name>
+    <ProjectReference Include="..\..\Common\NetNodeInfo\Chat.csproj">
+      <Project>{00f1d00c-57eb-4be1-b71a-83b739479646}</Project>
+      <Name>Chat</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
